# cpp-not-so-simple-calculator-sloths

./: CMakeLists.txt  Calculator.cpp  Calculator.h  Parser.cpp  Parser.h  PartType.h  ProblemPart.cpp  ProblemPart.h  Tester.hpp  main.cpp
headers/: Calculator.h  Parser.h  PartType.h  ProblemPart.h
src/: Calculator.cpp  Parser.cpp  ProblemPart.cpp
